# Hylion

./: .gitignore  .gitmodules  02_hylion_sw_dev_plan_v2.md  README.md  WORKLOG.md  et --hard HEAD@{3}
checkpoints/biped/stage_a_biped/: best.pt
checkpoints/biped/stage_b_hylion_v6/: best.pt
checkpoints/wakeword/: Hey_Hyleon.onnx  Hey_Hyleon.tflite
comm/: protocol.py  schema_validator.py
configs/schemas/: action.schema.json  emergency_event.schema.json  executor_command.schema.json  input_event.schema.json  smolvla_episode.schema.json  smolvla_session.schema.json
docs/: 01_하이리온_Physical_AI_로봇_기획서.md  03_scenario.md  05_hylion_brain_architecture_and_topic_map.md  05_hylion_brain_architecture_and_topic_map_no__pr.md  06_smolvla_collection_schema.md  07_non_ros2_pipeline_master_plan.md  08_emergency_implementation_checklist.md  09_project_flow_overview.md  09_runtime_tuning_table.md  10_hybrid_online_offline_refactor_plan.md  HYlio_JSON_Action_Schema (v1.0).json  HYlion_JSON_액션_스키마_v1.0.docx  smolvla_reference_and_architecture.md
docs/Legacy/: 02_hylion_sw_dev_plan.md  04_LEROBOT_ACT_JSON_MAPPING.md
jetson/cloud/: groq_client.py
jetson/core/: coordinator.py  hylion_brain_v2.py  network.py
jetson/core/brain/: action_router.py  brain_main.py  cli_input.py  llm_pipeline.py  llm_runtime.py  network_probe.py
jetson/core/llm/: __init__.py  base.py  factory.py  groq_llm.py  offline_stub.py  ollama_llm.py  prompt.py
jetson/core/stt/: __init__.py  base.py  factory.py  groq_whisper.py  local_whisper.py
jetson/core/tts/: __init__.py  melotts_client.py
jetson/expression/: factory.py  microphone.py  mouth_servo.py  requirements.txt  speaker.py  stt_whisper.py  wake_word.py
legacy/ros2/: README.md  brain_node.py
services/tts_server/: README.md  hylion-tts.service  server.py  setup.sh
services/tts_server/patches/: melotts_korean_only.patch
sim/isaaclab/usd/: config.yaml
sim/mujoco/: play_mujoco.py  run_sim2sim.sh
smolVLA/: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  agent_plan.md  arm_2week_plan.md  deploy_orin.sh  walking_rl_check.md
smolVLA/.claude/: settings.json
smolVLA/.claude/agents/: code-tester.md  planner.md  prod-test-runner.md  reflection.md  task-executor.md
smolVLA/.claude/commands/: complete-task.md  complete-test.md  handoff-task.md  handoff-test.md  observe.md  start-spec.md  update-docs.md  verify-result.md  wrap-spec.md
smolVLA/datacollector/: README.md  pyproject.toml
smolVLA/datacollector/interactive_cli/: main.sh
smolVLA/datacollector/interactive_cli/flows/: __init__.py  data_kind.py  teleop.py  transfer.py
smolVLA/datacollector/scripts/: run_teleoperate.sh  setup_env.sh
smolVLA/datacollector/tests/: README.md
smolVLA/dgx/: README.md
smolVLA/dgx/config/: README.md  dataset_repos.json
smolVLA/dgx/interactive_cli/: README.md  main.sh
smolVLA/dgx/runs/: README.md
smolVLA/dgx/scripts/: check_hardware.sh  preflight_check.sh  push_dataset_hub.sh  run_teleoperate.sh  save_dummy_checkpoint.sh  setup_train_env.sh  smoke_test.sh
smolVLA/dgx/tests/: README.md
smolVLA/docs/: repo_management.md
smolVLA/docs/lerobot_study/: 00_lerobot_repo_overview.md  01_lerobot_root_structure.md  (+10 more)
smolVLA/orin/: README.md  pyproject.toml
smolVLA/orin/calibration/: diagnose_motor_encoder.py
smolVLA/orin/checkpoints/: README.md
smolVLA/orin/config/: README.md  cameras.json  ports.json
smolVLA/orin/examples/tutorial/smolvla/: hil_inference.py  inference_baseline.py  load_checkpoint_test.py  measure_latency.py  smoke_test.py  using_smolvla_example.py
smolVLA/orin/inference/: README.md  hil_inference.py
smolVLA/orin/interactive_cli/: README.md  main.sh
smolVLA/orin/interactive_cli/configs/: node.yaml
smolVLA/orin/interactive_cli/flows/: _back.py  entry.py  env_check.py  inference.py
smolVLA/orin/lerobot/configs/: __init__.py
smolVLA/orin/lerobot/policies/: __init__.py  factory.py  pretrained.py
smolVLA/orin/lerobot/policies/smolvla/: modeling_smolvla.py
smolVLA/orin/lerobot/processor/: __init__.py  gym_action_processor.py  pipeline.py
smolVLA/orin/lerobot/scripts/: lerobot_calibrate.py  lerobot_find_joint_limits.py  lerobot_record.py  lerobot_replay.py  lerobot_setup_motors.py  lerobot_teleoperate.py
smolVLA/orin/lerobot/utils/: io_utils.py
smolVLA/orin/scripts/: run_python.sh  run_teleoperate.sh  setup_env.sh
smolVLA/orin/tests/: README.md  check_hardware.sh  inference_baseline.py  measure_latency.py  smoke_test.py
smolVLA/orin/tests/configs/: first_time.yaml  resume.yaml
smolVLA/scripts/: deploy_datacollector.sh  deploy_dgx.sh  deploy_orin.sh  dev-connect.sh  sync_ckpt_dgx_to_orin.sh  sync_dataset_collector_to_dgx.sh  sync_to_laba5.ps1  sync_to_laba5.sh
tests/: test_coordinator_integration.py  test_servo_interactive.py  test_simple_reply.py  test_speaker_diagnosis.py  voice_test.py
tests/2_hw_connection/: check_mouth_servo.py
tests/3_interface/: test_groq_api.py  test_groq_whisper.py  test_ollama_llm.py
tests/4_unit/: test_expression.py  test_stt_whisper.py
(+370 files in other folders)
