[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot"
version = "0.5.2"
description = "LeRobot curated subset for Jetson Orin (smolVLA + SO-100)"
requires-python = ">=3.10"

dependencies = [
    # torch / torchvision 은 setup_env.sh 에서 jp6/cu126 인덱스로 직접 설치
    # — pyproject 에 두면 pip 가 PyPI CPU-only wheel 로 덮어쓰기 때문
    "numpy>=1.24.0,<2.0.0",
    "opencv-python-headless>=4.9.0,<4.14.0",
    "Pillow>=10.0.0,<13.0.0",
    "einops>=0.8.0,<0.9.0",
    "draccus==0.10.0",
    "huggingface-hub>=1.0.0,<2.0.0",
    "requests>=2.32.0,<3.0.0",
    "gymnasium>=1.1.1,<2.0.0",
    "safetensors>=0.4.3,<1.0.0",
    "packaging>=24.2,<26.0",
    "termcolor>=2.4.0,<4.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "cmake>=3.29.0.1,<4.2.0",
    "setuptools>=71.0.0,<81.0.0",
]

[project.optional-dependencies]
smolvla = [
    "transformers==5.3.0",
    "num2words>=0.5.14,<0.6.0",
    "accelerate>=1.7.0,<2.0.0",
]
hardware = [
    "pynput>=1.7.8,<1.9.0",
    "pyserial>=3.5,<4.0",
    "deepdiff>=7.0.1,<9.0.0",
]
feetech = [
    "feetech-servo-sdk>=1.0.0,<2.0.0",
    "pyserial>=3.5,<4.0",
    "deepdiff>=7.0.1,<9.0.0",
]
zmq = [
    "pyzmq>=26.2.1,<28.0.0",
]

[project.scripts]
lerobot-calibrate         = "lerobot.scripts.lerobot_calibrate:main"
lerobot-find-cameras      = "lerobot.scripts.lerobot_find_cameras:main"
lerobot-find-port         = "lerobot.scripts.lerobot_find_port:main"
lerobot-find-joint-limits = "lerobot.scripts.lerobot_find_joint_limits:main"
lerobot-record            = "lerobot.scripts.lerobot_record:main"
lerobot-replay            = "lerobot.scripts.lerobot_replay:main"
lerobot-setup-motors      = "lerobot.scripts.lerobot_setup_motors:main"
lerobot-teleoperate       = "lerobot.scripts.lerobot_teleoperate:main"
lerobot-eval              = "lerobot.scripts.lerobot_eval:main"
lerobot-train             = "lerobot.scripts.lerobot_train:main"
lerobot-info              = "lerobot.scripts.lerobot_info:main"

[tool.setuptools.packages.find]
where = ["."]